[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/L3_forest/stage_bg-min-1.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/L3_forest/stage_fg-min.png" type="Texture" id=3]
[ext_resource path="res://Levels/2.0 - Forest/Stage.gd" type="Script" id=4]
[ext_resource path="res://sprites/L3_forest/stage_bit.png" type="Texture" id=5]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://hitnhurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/TeaParty.tscn" type="PackedScene" id=9]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/L3_forest/vignette_fade.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1026.76, 249.844 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 119.474, 48.8398 )

[node name="Stage" type="Node2D"]
script = ExtResource( 4 )

[node name="LightSpot" type="Position2D" parent="."]
position = Vector2( 682.164, 599.736 )

[node name="MaxLightSpotDistance" type="Position2D" parent="."]
position = Vector2( 662.267, 1438.23 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1380.0
margin_top = -1098.58
margin_right = 4127.0
margin_bottom = 3457.42
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="stage_bg-min-1" type="Sprite" parent="."]
position = Vector2( 704.957, 622.059 )
texture = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="TeaParty" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 819.265, 516.788 )

[node name="Stage" type="YSort" parent="YSort"]

[node name="stage_bit" type="Node2D" parent="YSort/Stage"]
position = Vector2( 1015.18, -168.827 )

[node name="stage_bit2" type="Sprite" parent="YSort/Stage/stage_bit"]
position = Vector2( -310.223, 790.887 )
texture = ExtResource( 5 )

[node name="stage_fg" type="Node2D" parent="YSort/Stage"]
position = Vector2( 1104.76, 688.841 )

[node name="stage_fg-min" type="Sprite" parent="YSort/Stage/stage_fg"]
position = Vector2( -399.802, -66.782 )
texture = ExtResource( 3 )

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 184.132, 1274.51 )
camera = NodePath("../../PuppyCamera")

[node name="PuppyCamera" parent="." instance=ExtResource( 6 )]
position = Vector2( 929.997, 677.082 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -224.538, -76.1504 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1694.5, 1698.77 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
position = Vector2( 679.321, 477.515 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 4, 330.983 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="vignette_fade" type="Sprite" parent="."]
position = Vector2( 748.206, 1403.6 )
rotation = -1.5708
scale = Vector2( 0.268688, 1 )
texture = ExtResource( 11 )

[node name="BottomSP" parent="." instance=ExtResource( 8 )]
position = Vector2( 189.722, 1373.55 )

[node name="TopSP" parent="." instance=ExtResource( 8 )]
position = Vector2( 39.4984, 575.659 )

[node name="DoorTZ" parent="." instance=ExtResource( 10 )]
position = Vector2( 184.753, 1517.81 )

[node name="CollisionShape2D" parent="DoorTZ" index="0"]
position = Vector2( 14.2119, 8.5271 )
shape = SubResource( 2 )

[node name="Collisions" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/StaticBody2D"]
polygon = PoolVector2Array( -34.4691, 745.237, 480.305, 738.166, 484.547, 845.646, 1126.6, 858.374, 1132.26, 794.734, 1224.18, 794.734, 1235.49, 510.477, 1211.45, 516.134, 1208.62, 687.254, 1091.24, 678.769, 1089.83, 748.065, 526.974, 756.55, 528.388, 641.999, -37.2975, 657.556 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Collisions/StaticBody2D"]
polygon = PoolVector2Array( 0.886353, 509.77, 1225.6, 532.398, 1214.28, 586.138, 1381.16, 591.795, 1381.16, 1412.04, 326.155, 1403.55, 328.984, 1692.05, 1997.76, 1627, 1669.66, 255.212, -222.559, 159.045, -219.731, 1627, 77.2539, 1677.91, 91.396, 1403.55, -1.94214, 1403.55 )

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="transition_triggered" from="DoorTZ" to="." method="_on_DoorTZ_transition_triggered"]

[editable path="PuppyCamera"]
[editable path="PlayerDetectionZone"]
[editable path="DoorTZ"]
